--- a/d18/users/templates/login.html
+++ b/d18/users/templates/login.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <title>Store - Авторизация</title>
-    <link href="../vendor/css/auth.css" rel="stylesheet"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
-            crossorigin="anonymous"></script>
-</head>
-<body class="bg-primary">
-<div id="layoutAuthentication">
-    <div id="layoutAuthentication_content">
+{%extends "base.html"%}
+ {% load static%}
+{%block content%}
         <main>
             <div class="container">
                 <div class="row justify-content-center">
@@ -29,7 +16,10 @@
                             <div class="card-header"><h3 class="text-center font-weight-light my-4">Авторизация</h3>
                             </div>
                             <div class="card-body">
-                                <form>
+                                <form action="{%url 'users:login'%}" method="post" >
+                                    {{form.as_p}}
+                                    {%csrf_token%}
+
                                     <div class="form-group">
                                         <label class="small mb-1" for="inputEmailAddress">Имя пользователя</label>
                                         <input class="form-control py-4" id="inputEmailAddress" type="text"
@@ -68,11 +58,4 @@
                 </div>
             </div>
         </main>
-    </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="../vendor/js/auth-admin.js"></script>
-</body>
-</html>
+    {%endblock%}
