--- a/d18/product/templates/products.html
+++ b/d18/product/templates/products.html
@@ -79,7 +79,7 @@
 
                         </div>
                         <div class="card-footer text-center">
-                            <button type="button" class="btn btn-outline-success">Отправить в корзину</button>
+                            <button type="button" class="btn btn-outline-success" href="{% url 'products:basket_add' product.id %}">Отправить в корзину</button>
                         </div>
                     </div>
                 </div>
