--- a/d18/users/templates/profile.html
+++ b/d18/users/templates/profile.html
@@ -58,6 +58,8 @@
             </form>
         </div>
         <div class="col-lg-5">
+            {%include 'users/baskets.html'%}
+            {%endblock%}
             <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
                 Корзина <span class="badge badge-secondary badge-pill">3</span>
             </h4>
