--- a/d18/product/templates/base.html
+++ b/d18/product/templates/base.html
@@ -51,7 +51,7 @@
                         </li>
                         <li><a class="dropdown-item" href="orders/orders.html">Заказы</a></li>
                         {% if user.is_superuser or user.is_staff %}
-                        <li><a class="dropdown-item" href="{% url ‘admin:index' %}">Админ-панель</a></li>
+                        <li><a class="dropdown-item" href="{% url 'admin:index' %}">Админ-панель</a></li>
                         {%endif%}
                         <li>
                             <hr class="dropdown-divider">
