--- a/d18/users/templates/baskets.html
+++ b/d18/users/templates/baskets.html
@@ -1,6 +1,6 @@
 {% if baskets %}
 <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
-                Корзина <span class="badge badge-secondary badge-pill">3</span>
+                Корзина <span class="badge badge-secondary badge-pill">{{total_quantity}}</span>
             </h4>
     {% for basket in baskets %}
 <div class="card mb-3">
@@ -13,11 +13,12 @@
                         <div class="row text-center">
                             <div class="col-lg-4">
                                 <input name="basketID" type="number" class="form-control"
-                                       value="1" min="0">
+                                       value="{{baskets_quantity}}" min="0">
                             </div>
                             <div class="col-lg-4">{{ basket.sum }} руб.</div>
                             <div class="col-lg-4">
-                                <a href="#">
+                                <a href="{% url 'product:basket_remove' basket.id %}">
+                                    delete
                                     <i class="fas fa-trash"></i>
                                 </a>
                             </div>
@@ -29,7 +30,7 @@
 <div class="card mb-3">
                 <div class="card-footer">
                     <p class="float-left">Итого</p>
-                    <h4 class="float-right">{{ baskets.total_sum }} руб.</h4>
+                    <h4 class="float-right">{{total_sum}} руб.</h4>
                 </div>
             </div>
 <a class="btn btn-success btn-lg float-right" href="">
