--- a/d18/product/templates/base.html
+++ b/d18/product/templates/base.html
@@ -37,10 +37,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'products:index'%}">Каталог <i class="fas fa-shopping-bag"></i> </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:login'%}">Войти <i class="fas fa-sign-in-alt"></i></a>
-                </li>
-                <li class="nav-item dropdown">
+                {% if user.is_authenticated %}
+                       <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-user-circle"></i>
@@ -57,7 +55,7 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li>
-                            <a class="dropdown-item" href="{%url 'index' %}">
+                            <a class="dropdown-item" href="{%url 'index'%}">
                                 Выйти
                             </a>
                         </li>
@@ -66,6 +64,13 @@
             </ul>
         </div>
     </div>
+                {%else%}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'users:login'%}">Войти <i class="fas fa-sign-in-alt"></i></a>
+                </li>
+                {%endif%}
+
+
 </nav>
 
 
