--- a/d18/users/templates/baskets.html
+++ b/d18/users/templates/baskets.html
@@ -13,7 +13,7 @@
                         <div class="row text-center">
                             <div class="col-lg-4">
                                 <input name="basketID" type="number" class="form-control"
-                                       value="{{baskets_quantity}}" min="0">
+                                       value="{{basket.quantity}}" min="0">
                             </div>
                             <div class="col-lg-4">{{ basket.sum }} руб.</div>
                             <div class="col-lg-4">
@@ -38,6 +38,6 @@
             </a>
 {% else %}
 <h4 class="mt-3 mb-3 d-flex justify-content-between align-items-center mb-3">
-                Корзина пуста <span class="badge badge-secondary badge-pill">3</span>
+                Корзина пуста <span class="badge badge-secondary badge-pill">{{total_quantity}}</span>
             </h4>
 {% endif %}
