--- a/d18/users/templates/login.html
+++ b/d18/users/templates/login.html
@@ -45,8 +45,8 @@
 <!--                                        <input class="form-control py-4" id="inputPassword" type="password"-->
 <!--                                               placeholder="Введите пароль"/>-->
 <!--                                    </div>-->
-<!--                                    <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">-->
-<!--                                        <a class="small" href="#">Забыли пароль?</a>-->
+                              <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
+                                     <a class="small" href="{%url 'admin_password_reset'%}">Забыли пароль?</a>
                                         <input class="btn btn-primary" type="submit" value="Авторизоваться">
                             </div>
                                     <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
